--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/v1.0.0-beta (default).loader.js";
+      var loaderUrl = buildUrl + "/the-genesis-clinic-v1.0.0-beta2.loader.js";
       var config = {
-        dataUrl: buildUrl + "/v1.0.0-beta (default).data.gz",
-        frameworkUrl: buildUrl + "/v1.0.0-beta (default).framework.js.gz",
-        codeUrl: buildUrl + "/v1.0.0-beta (default).wasm.gz",
+        dataUrl: buildUrl + "/the-genesis-clinic-v1.0.0-beta2.data",
+        frameworkUrl: buildUrl + "/the-genesis-clinic-v1.0.0-beta2.framework.js",
+        codeUrl: buildUrl + "/the-genesis-clinic-v1.0.0-beta2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "Digital Universe",
         productName: "The Genesis Clinic",
-        productVersion: "1.0.0-beta",
+        productVersion: "1.0.0-beta2",
         showBanner: unityShowBanner,
       };
 
